src/test/ui/parser/macro/trait-object-macro-matcher.stderr
error: lifetime in trait object type must be followed by `+`
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!('static);
   |        ^^^^^^^

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!('static);
   |        ^^^^^^^ trait object without `dyn`
   |
   = note: `#[warn(bare_trait_objects)]` on by default
help: use `dyn`
   |
LL |     m!(dyn 'static);
   |        ^^^

error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!('static);
   |        ^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0224`.
